// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer component Footer component renders correctly with props 1`] = `
<footer
  className="footer-class"
>
  <Styled(Row)
    className="footer-candidate-wrapper"
    fullBleed={true}
  >
    <Styled(FooterTopCandidateA)
      className="footer-class"
      copyrightText=""
      isLoggedIn={false}
      legalLinks={Array []}
      navLinks={Array []}
      openEmailSignUpModal={[Function]}
      openSmsSignUpModal={[Function]}
      pageName=""
      referenceID=""
    />
    <Connect(Styled(ReduxForm)) />
    <Connect(Styled(ReduxForm)) />
  </Styled(Row)>
  <Styled(Row)
    className="footer-middle mobile"
    fullBleed={true}
  >
    <FooterMiddleMobile
      className="footer-class"
      isLoggedIn={false}
      navLinkItems={Array []}
    />
  </Styled(Row)>
  <Styled(Row)
    className="content-wrapper"
    fullBleed={true}
  >
    <Styled(Row)
      className="footer-middle desktop"
    >
      <FooterMiddleDesktop
        className="footer-class"
        isLoggedIn={false}
        navLinks={Array []}
      />
    </Styled(Row)>
  </Styled(Row)>
  <div
    className="footer-bottom"
  >
    <Styled(Row)
      className="content-wrapper"
    >
      <Styled(Row)
        className="fullbleed-mobile"
      >
        <Styled(Col)
          className="footer-bottom__slot--1 default-offset"
          colSize={
            Object {
              "large": 3,
              "medium": 8,
              "small": 6,
            }
          }
        >
          <Styled(Copyright) />
          <div
            className="poc-hide"
          >
            <Styled(Button)>
              Get Registered User Info
            </Styled(Button)>
            <Styled(Button)>
              Get Order detail
            </Styled(Button)>
          </div>
        </Styled(Col)>
        <Styled(Col)
          className="footer-bottom__slot--2 default-offset"
          colSize={
            Object {
              "large": 7,
              "medium": 8,
              "small": 6,
            }
          }
        >
          <Styled(LegalLinks)
            links={Array []}
          />
        </Styled(Col)>
        <Styled(Col)
          className="footer-bottom__slot--3 default-offset"
          colSize={
            Object {
              "large": 2,
              "medium": 8,
              "small": 6,
            }
          }
        >
          <Component
            showInFooter={true}
          />
        </Styled(Col)>
      </Styled(Row)>
      <Styled(Row)
        fullBleed={true}
      >
        <Styled(Col)
          colSize={
            Object {
              "large": 12,
              "medium": 8,
              "small": 6,
            }
          }
        >
          <Styled(BodyCopy)
            className="reference-id"
            color="text.primary"
            component="p"
            fontFamily="primary"
            fontSize="fs32"
            fontWeight="regular"
            letterSpacing="normal"
            lineHeight="normal"
            link={null}
            textAlign="left"
          />
        </Styled(Col)>
      </Styled(Row)>
    </Styled(Row)>
  </div>
</footer>
`;

exports[`Footer component Footer component renders correctly without props 1`] = `
<footer>
  <Styled(Row)
    className="footer-candidate-wrapper"
    fullBleed={true}
  >
    <Styled(FooterTopCandidateA)
      copyrightText=""
      isLoggedIn={false}
      legalLinks={Array []}
      navLinks={Array []}
      openEmailSignUpModal={[Function]}
      openSmsSignUpModal={[Function]}
      pageName=""
      referenceID=""
    />
    <Connect(Styled(ReduxForm)) />
    <Connect(Styled(ReduxForm)) />
  </Styled(Row)>
  <Styled(Row)
    className="footer-middle mobile"
    fullBleed={true}
  >
    <FooterMiddleMobile
      isLoggedIn={false}
      navLinkItems={Array []}
    />
  </Styled(Row)>
  <Styled(Row)
    className="content-wrapper"
    fullBleed={true}
  >
    <Styled(Row)
      className="footer-middle desktop"
    >
      <FooterMiddleDesktop
        isLoggedIn={false}
        navLinks={Array []}
      />
    </Styled(Row)>
  </Styled(Row)>
  <div
    className="footer-bottom"
  >
    <Styled(Row)
      className="content-wrapper"
    >
      <Styled(Row)
        className="fullbleed-mobile"
      >
        <Styled(Col)
          className="footer-bottom__slot--1 default-offset"
          colSize={
            Object {
              "large": 3,
              "medium": 8,
              "small": 6,
            }
          }
        >
          <Styled(Copyright) />
          <div
            className="poc-hide"
          >
            <Styled(Button)>
              Get Registered User Info
            </Styled(Button)>
            <Styled(Button)>
              Get Order detail
            </Styled(Button)>
          </div>
        </Styled(Col)>
        <Styled(Col)
          className="footer-bottom__slot--2 default-offset"
          colSize={
            Object {
              "large": 7,
              "medium": 8,
              "small": 6,
            }
          }
        >
          <Styled(LegalLinks)
            links={Array []}
          />
        </Styled(Col)>
        <Styled(Col)
          className="footer-bottom__slot--3 default-offset"
          colSize={
            Object {
              "large": 2,
              "medium": 8,
              "small": 6,
            }
          }
        >
          <Component
            showInFooter={true}
          />
        </Styled(Col)>
      </Styled(Row)>
      <Styled(Row)
        fullBleed={true}
      >
        <Styled(Col)
          colSize={
            Object {
              "large": 12,
              "medium": 8,
              "small": 6,
            }
          }
        >
          <Styled(BodyCopy)
            className="reference-id"
            color="text.primary"
            component="p"
            fontFamily="primary"
            fontSize="fs32"
            fontWeight="regular"
            letterSpacing="normal"
            lineHeight="normal"
            link={null}
            textAlign="left"
          />
        </Styled(Col)>
      </Styled(Row)>
    </Styled(Row)>
  </div>
</footer>
`;
